package org.nutrihealthplan.dietapp.model.enums;

public enum Role {
    ADMIN,
    USER
}
