package org.nutrihealthplan.dietapp.model.enums;

public enum Scope {
    PRIVATE,
    SHARED,
    GLOBAL,
    REGIONAL,
    TEMPLATE,
    SYSTEM,
    ARCHIVED,
    PENDING,
    EXPIRED,
    LIMITED;
}
