package org.nutrihealthplan.dietapp.model.enums;

public enum UnitType {
    PIECE,
    CUP,
    TABLESPOON,
    TEASPOON,
    MUG,
    HANDFUL
}
